# smart-memory-mcp

./: .gitignore  CHANGELOG.md  code_tools.py  pyproject.toml  server.py
smartmemory_mcp/: code_parser.py  code_tools.py  eval_logger.py  server.py  tier.py
smartmemory_mcp/backends/: dispatch.py  interface.py  local.py  models.py  remote.py
smartmemory_mcp/tools/: agent_tools.py  anchor_tools.py  code_tools.py  common.py  decision_tools.py  dev_tools.py  evolution_tools.py  insight_tools.py  lifecycle_tools.py  memory_tools.py  plan_tools.py  portability_tools.py  reasoning_tools.py  structured_tools.py  zettel_tools.py
tests/: test_backend_dispatch.py  test_confidence_display.py  test_get_working_context_standalone.py  test_lifecycle_tools.py  test_lineage_display.py  test_normalize.py  test_portability.py  test_server_decompose.py  test_server_multi_hop.py  test_stale_display.py  test_tier_registration.py
