[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmemory-mcp"
version = "0.1.0"
description = "Thin MCP server for SmartMemory — HTTP client to remote API"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastmcp",
    "httpx",
]

[project.scripts]
smartmemory-mcp = "server:main"
