[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmemory-mcp"
version = "0.2.1"
description = "Unified SmartMemory MCP server — tiered tools, local + remote backends"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0"]

[project.scripts]
smartmemory-mcp = "smartmemory_mcp.server:main"
